# multi-agent

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.en.md  README.md  issue.json  pyproject.toml  ruff.toml
.claude/agents/: architecture-engineer.md  backend-developer.md  cicd.md  dba.md  docs-writer.md  frontend-developer.md  project-leader.md  project-manager.md  qa.md  test-engineer.md  testsheet-creator.md
.github/workflows/: ci.yml
docs/: PLAN.md  architecture.html
examples/specs/: sample-spec.md
orchestrator/: __init__.py  __main__.py  agents.py  board.py  codex_pricing.json  config.py  fsutil.py  gitcheckpoints.py  monitor.py  procutil.py  prompts.py  runner.py  scheduler.py  webui.py  workspace.py
orchestrator/backends/: __init__.py  base.py  claude_cli.py  claude_sdk.py  claude_team.py  codex_cli.py  mock.py  openai_agents.py
templates/: AGENTS.md  CLAUDE.md
tests/: conftest.py  test_agents.py  test_audit10_misc.py  test_audit11_regressions.py  test_audit13_fixes.py  test_audit14_followup.py  test_audit15_fixes.py  test_audit16.py  test_audit17.py  test_audit18.py  test_audit19.py  test_audit20.py  test_audit21.py  test_audit22.py  test_audit23.py  test_audit24.py  test_audit2_board.py  test_audit2_codex.py  test_audit2_config.py  test_audit2_monitor.py  test_audit2_runner.py  test_audit2_webui.py  test_audit3_backends.py  test_audit3_board.py  test_audit3_monitor.py  test_audit3_runner.py  test_audit3_sched.py  test_audit3_webui.py  test_audit4_board.py  test_audit4_config.py  test_audit4_monitor.py  test_audit4_openai.py  test_audit4_webui.py  test_audit5_base.py  test_audit5_board.py  test_audit5_cli.py  test_audit5_config.py  test_audit5_monitor.py  test_audit5_openai.py  test_audit5_runner.py  (+43 more)
