[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "web-team-orchestrator"
version = "0.1.0"
description = "Multi-agent, multi-backend orchestrator that builds a web service into a target project directory."
requires-python = ">=3.10"
dependencies = [
    # Frontmatter parsing has a no-dep fallback; pyyaml is optional but recommended.
    "pyyaml>=6.0",
]

# Optional backend SDKs. Install from a source checkout (pip install -e .) so the
# repo-root .claude/agents and templates dirs that the runtime expects stay on disk.
[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.0"]
# NOTE: openai-agents is published but its availability/version pinning is brittle in some
# environments; the OpenAI backend may fail to install. mock/CLI backends never need it.
openai = ["openai-agents>=0.0.1"]
all = ["claude-agent-sdk>=0.1.0", "openai-agents>=0.0.1"]

[project.scripts]
web-team = "orchestrator.__main__:main"
web-team-monitor = "orchestrator.monitor:main"
web-team-web = "orchestrator.webui:main"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.backends"]

[tool.setuptools.package-data]
orchestrator = ["codex_pricing.json"]

# config.FRAMEWORK_ROOT resolves to the repo root and loads .claude/agents/*.md and
# templates/* from there. Those live OUTSIDE the orchestrator package, so a plain wheel
# install cannot bundle them — install from a source checkout (`pip install -e .`) or use
# the Docker image (which COPYs both dirs). See README "Install" / "Deploy (Docker)".

# Make plain `pytest` work like `python -m pytest`: put the repo root on sys.path so the
# `orchestrator` package imports without a prior install.
[tool.pytest.ini_options]
pythonpath = ["."]
