[build-system]
# Recent setuptools (>=69.3) for the declarative [tool.setuptools.data-files] bundling used to
# ship the repo-root .claude/agents + templates dirs into the wheel/sdist (see below). #18 / #2.
# (force-include is intentionally NOT used — it is not valid in the declarative table.)
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "web-team-orchestrator"
version = "0.1.0"
description = "Multi-agent, multi-backend orchestrator that builds a web service into a target project directory."
requires-python = ">=3.10"
dependencies = [
    # Frontmatter parsing has a no-dep fallback; pyyaml is optional but recommended.
    "pyyaml>=6.0",
]

# Optional backend SDKs. Install from a source checkout (pip install -e .) so the
# repo-root .claude/agents and templates dirs that the runtime expects stay on disk.
[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.0"]
# NOTE: openai-agents is published but its availability/version pinning is brittle in some
# environments; the OpenAI backend may fail to install. mock/CLI backends never need it.
openai = ["openai-agents>=0.0.1"]
all = ["claude-agent-sdk>=0.1.0", "openai-agents>=0.0.1"]

[project.scripts]
web-team = "orchestrator.__main__:main"
web-team-monitor = "orchestrator.monitor:main"
web-team-web = "orchestrator.webui:main"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.backends"]
include-package-data = true

[tool.setuptools.package-data]
orchestrator = ["codex_pricing.json"]

# --- Bundling repo-root runtime data into wheel + sdist (#18 / #2) ---------------------
# config.FRAMEWORK_ROOT = Path(orchestrator/config.py).parent.parent. In an editable install
# that is the repo root, so .claude/agents and templates are found in place. In a *built
# wheel* the orchestrator package lands at <site-packages>/orchestrator/, so parent.parent is
# <site-packages> — where those repo-root dirs do NOT exist, because they live OUTSIDE the
# orchestrator package and pyproject package-data can only bundle files *inside* a package.
#
# data-files DOES ship both dirs inside the built wheel + sdist (verified below). They install
# relative to the install prefix (sys.prefix / the venv root), NOT site-packages. The loader
# (config._resolve_runtime_dir) now scans BOTH the prefix data-files locations AND the
# site-packages-style roots in addition to FRAMEWORK_ROOT, so a plain wheel auto-discovers them
# at <prefix>/share/web-team-orchestrator/... — wheel installs are now a supported runtime path.
[tool.setuptools.data-files]
"share/web-team-orchestrator/.claude/agents" = [".claude/agents/*.md"]
"share/web-team-orchestrator/templates" = ["templates/CLAUDE.md", "templates/AGENTS.md"]

# Loader-fallback note — WHAT WORKS / WHAT DOES NOT (#18 / #2), precisely:
#  * editable install (`pip install -e .`): WORKS fully. FRAMEWORK_ROOT == repo root; both
#    .claude/agents and templates are read in place. This is a SUPPORTED path.
#  * Docker image: WORKS fully. The Dockerfile COPYs .claude and templates to /app and runs
#    from there (FRAMEWORK_ROOT == /app). This is a SUPPORTED path.
#  * sdist (`pip install web-team-orchestrator-*.tar.gz` from source build): the dirs are
#    present in the archive via MANIFEST.in, but a build from the sdist produces the same
#    wheel-shaped layout below, so see the wheel caveat.
#  * plain wheel (`pip install web-team-orchestrator`): the .claude/agents + templates bytes
#    are bundled (data-files) and land under <prefix>/share/web-team-orchestrator/. The loader
#    (orchestrator/config.py::_resolve_runtime_dir) now ALSO scans those data-files locations
#    (sys.prefix / base_prefix and the site-packages-style roots), not just FRAMEWORK_ROOT, so a
#    plain wheel install resolves the runtime dirs at <prefix>/share/... — this is now a
#    SUPPORTED path. (Editable install and Docker resolve them from the repo/app root instead.)

# Make plain `pytest` work like `python -m pytest`: put the repo root on sys.path so the
# `orchestrator` package imports without a prior install.
[tool.pytest.ini_options]
pythonpath = ["."]
# #25: unraisable 예외(예: asyncio transport __del__ 의 "Event loop is closed")가 CI 의
#      성공에 묻히지 않도록 해당 경고를 에러로 승격한다. 전체 -W error 는 서드파티
#      DeprecationWarning 까지 깨뜨려 과하므로, 실제로 버그를 나타내는 unraisable 만 가둔다.
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]
